--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ license = "MIT OR APACHE-2.0"
 [dependencies]
 serde_json = "1.0.39"
 reqwest = "0.9.12"
+serde = { version = "1.0.89", features = ["derive"] }
+regex = "1.1.2"
+lazy_static = "1.3.0"
+failure = "0.1.5"
+dirs = "1.0.5"
