--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2018"
 license = "MIT OR APACHE-2.0"
 
 [dependencies]
-serde_json = "1"
+clap = "2"
+dirs = "1"
+failure = "0.1"
+open = "1"
+regex = "1"
 reqwest = "0.9"
 serde = { version = "1", features = ["derive"] }
-regex = "1"
-failure = "0.1"
-dirs = "1"
-clap = "2"
+serde_json = "1"
 
 [[bin]]
 name = "ghnf"
