--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = "2"
 dirs = "1"
 failure = "0.1"
 open = "1"
+rayon = "1"
 regex = "1"
 reqwest = "0.9"
 serde = { version = "1", features = ["derive"] }
