--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.3.0"
 authors = ["equal-l2 <eng.equall2@gmail.com>"]
 edition = "2018"
 license = "MIT OR APACHE-2.0"
+build = "build.rs"
 
 [dependencies]
 clap = "2"
@@ -15,6 +16,9 @@ regex = "1"
 reqwest = "0.9"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[build-dependencies]
+chrono = "0.4"
 
 [[bin]]
 name = "ghnf"
