--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rayon = "1.3.0"
 regex = "1.3.3"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.44"
+once_cell = "1.3.1"
 
 [dependencies.reqwest]
 version = "0.9.24"
