--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ serde_json = "1.0.44"
 once_cell = "1.3.1"
 
 [dependencies.reqwest]
-version = "0.9.24"
+version = "0.10.1"
 default-features = false
-features = ["rustls-tls", "trust-dns"]
+features = ["rustls-tls", "blocking", "json", "gzip"]
 
 [build-dependencies]
 chrono = "0.4.10"
