--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,23 @@ license = "MIT OR APACHE-2.0"
 build = "build.rs"
 
 [dependencies]
-clap = "2.33.0"
-dirs = "2.0.2"
-failure = "0.1.7"
+clap = "2.33.1"
+dirs = "3.0.1"
+failure = "0.1.8"
+once_cell = "1.4.0"
 open = "1.4.0"
-regex = "1.3.6"
-serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.51"
-once_cell = "1.3.1"
+regex = "1.3.9"
+serde = { version = "1.0.114", features = ["derive"] }
+serde_json = "1.0.56"
+tokio = { version = "0.2.21", features = ["macros"] }
 
 [dependencies.reqwest]
-version = "0.10.4"
+version = "0.10.6"
 default-features = false
-features = ["rustls-tls", "blocking", "json", "gzip"]
+features = ["rustls-tls", "json", "gzip"]
 
 [build-dependencies]
-chrono = "0.4.11"
+chrono = "0.4.13"
 
 [[bin]]
 name = "ghnf"
