--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,17 @@ open = "1.4.0"
 regex = "1.3.9"
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.56"
-tokio = { version = "0.2.21", features = ["macros"] }
+tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
 
 [dependencies.reqwest]
 version = "0.10.6"
 default-features = false
 features = ["rustls-tls", "json", "gzip"]
+
+[dependencies.futures]
+version = "0.3.5"
+default-features = false
+features = ["std"]
 
 [build-dependencies]
 chrono = "0.4.13"
