--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,27 @@ failure = "0.1.8"
 once_cell = "1.4.0"
 open = "1.4.0"
 regex = "1.3.9"
-serde = { version = "1.0.114", features = ["derive"] }
-serde_json = "1.0.56"
-tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
-
-[dependencies.reqwest]
-version = "0.10.6"
-default-features = false
-features = ["rustls-tls", "json", "gzip"]
+serde_json = "1.0.58"
 
 [dependencies.futures]
 version = "0.3.5"
 default-features = false
-features = ["std"]
+features = ["alloc"]
+
+[dependencies.serde]
+version = "1.0.116"
+default-features = false
+features = ["derive"]
+
+[dependencies.tokio]
+version = "0.2.21"
+default-features = false
+features = ["macros", "rt-threaded"]
+
+[dependencies.reqwest]
+version = "0.10.6"
+default-features = false
+features = ["rustls-tls", "gzip"]
 
 [build-dependencies]
 chrono = "0.4.13"
