--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,36 +7,36 @@ license = "MIT OR APACHE-2.0"
 build = "build.rs"
 
 [dependencies]
-clap = "2.33.1"
+clap = "2.33.3"
 dirs = "3.0.1"
 failure = "0.1.8"
-once_cell = "1.4.0"
+once_cell = "1.5.1"
 open = "1.4.0"
-regex = "1.3.9"
-serde_json = "1.0.58"
+regex = "1.4.2"
+serde_json = "1.0.59"
 
 [dependencies.futures]
-version = "0.3.5"
+version = "0.3.8"
 default-features = false
 features = ["alloc"]
 
 [dependencies.serde]
-version = "1.0.116"
+version = "1.0.117"
 default-features = false
 features = ["derive"]
 
 [dependencies.tokio]
-version = "0.2.21"
+version = "0.3.3"
 default-features = false
-features = ["macros", "rt-threaded"]
+features = ["macros", "rt-multi-thread"]
 
 [dependencies.reqwest]
-version = "0.10.6"
+version = "0.10.8"
 default-features = false
 features = ["rustls-tls", "gzip"]
 
 [build-dependencies]
-chrono = "0.4.13"
+chrono = "0.4.19"
 
 [[bin]]
 name = "ghnf"
