--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ failure = "0.1.8"
 once_cell = "1.5.2"
 open = "1.4.0"
 regex = "1.4.2"
-serde_json = "1.0.59"
+serde_json = "1.0.61"
 
 [dependencies.futures]
 version = "0.3.8"
@@ -21,17 +21,17 @@ default-features = false
 features = ["alloc"]
 
 [dependencies.serde]
-version = "1.0.117"
+version = "1.0.118"
 default-features = false
 features = ["derive"]
 
 [dependencies.tokio]
-version = "0.2.23"
+version = "1.0.1"
 default-features = false
-features = ["macros", "rt-threaded"]
+features = ["macros", "rt-multi-thread"]
 
 [dependencies.reqwest]
-version = "0.10.9"
+version = "0.11.0"
 default-features = false
 features = ["rustls-tls", "gzip"]
 
