--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,33 +7,34 @@ license = "MIT OR APACHE-2.0"
 build = "build.rs"
 
 [dependencies]
+anyhow = "1.0.38"
 clap = "2.33.3"
 dirs = "3.0.1"
-failure = "0.1.8"
-once_cell = "1.5.2"
+once_cell = { version = "1.5.2", default-features = false }
 open = "1.4.0"
-regex = "1.4.2"
+regex = "1.4.3"
 serde_json = "1.0.61"
+thiserror = "1.0.23"
 
 [dependencies.futures]
-version = "0.3.8"
+version = "0.3.12"
 default-features = false
 features = ["alloc"]
-
-[dependencies.serde]
-version = "1.0.118"
-default-features = false
-features = ["derive"]
-
-[dependencies.tokio]
-version = "1.0.1"
-default-features = false
-features = ["macros", "rt-multi-thread"]
 
 [dependencies.reqwest]
 version = "0.11.0"
 default-features = false
-features = ["rustls-tls", "gzip"]
+features = ["default-tls", "gzip"]
+
+[dependencies.serde]
+version = "1.0.123"
+default-features = false
+features = ["derive"]
+
+[dependencies.tokio]
+version = "1.1.1"
+default-features = false
+features = ["macros", "rt-multi-thread"]
 
 [build-dependencies]
 chrono = "0.4.19"
